--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "Proprietary",
   "private": true,
   "scripts": {
-    "start": "./node_modules/.bin/nodemon --ignore node_modules shortly.js",
+    "start": "./node_modules/.bin/nodemon --debug --ignore node_modules shortly.js",
     "test": "node shortly.js& ./node_modules/.bin/mocha --bail --reporter nyan test/ServerSpec.js; pkill -n node;"
   },
   "dependencies": {
@@ -27,6 +27,9 @@
     "request": "^2.34.0",
     "sqlite3": "~2.2.0",
     "cookie-parser": "~1.3.3",
-    "express-restrict": "0.0.3"
+    "express-restrict": "0.0.3",
+    "passport": "~0.2.1",
+    "passport-github": "~0.1.5",
+    "method-override": "~2.2.0"
   }
 }
