--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-restrict": "0.0.3",
     "passport": "~0.2.1",
     "passport-github": "~0.1.5",
-    "method-override": "~2.2.0"
+    "method-override": "~2.2.0",
+    "passport-facebook": "~1.0.3"
   }
 }
